--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -33,7 +33,7 @@
 
         <!-- Sidebar - Brand -->
         <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
-            <img src="../assets/img/errandlogo-borderless.png" style="width: 20px; height: auto;" class="mr-2">
+            <img src="/assets/img/errandlogo-borderless.png" style="width: 20px; height: auto;" class="mr-2">
             <div class="sidebar-brand-text ">
                 ERRAND
             </div>
