--- a/src/main/resources/templates/client-tasks-list.html
+++ b/src/main/resources/templates/client-tasks-list.html
@@ -77,7 +77,12 @@
                             <td th:text="${task.targetDate}"></td>
                             <td th:text="${task.street+', '+task.city+', '+task.postalCode}"></td>
                             <td th:text="${task.Status}"></td>
-                            <td style="text-align: center">
+                            <td style="text-align: center; white-space: nowrap;">
+                                <a th:href="@{/client/tasks/{taskId}/cancel(taskId=${task.id})}"
+                                   title="View Offers"
+                                   class="btn btn-info btn-circle btn-sm">
+                                    <i class="fas fa-tags"></i>
+                                </a>
                                 <a th:href="@{/client/tasks/{taskId}/edit(taskId=${task.id})}"
                                 class="btn btn-warning btn-circle btn-sm">
                                     <i class="fas fa-pen"></i>
