--- a/src/main/resources/templates/admin-dashboard.html
+++ b/src/main/resources/templates/admin-dashboard.html
@@ -171,7 +171,7 @@
                     <!-- Card Header - Accordion -->
                     <a href="#usersChart" class="d-block card-header py-3" data-toggle="collapse"
                        role="button" aria-expanded="true" aria-controls="collapseCardExample">
-                        <h6 class="m-0 font-weight-bold text-primary">Service Provider Count</h6>
+                        <h6 class="m-0 font-weight-bold text-primary">User Chart</h6>
                     </a>
                     <!-- Card Content - Collapse -->
                     <div class="collapse show">
@@ -184,12 +184,11 @@
             </div>
 
         </div>
+
+        <!-- Page level custom scripts -->
+        <script type="text/javascript" th:src="@{/vendor/chart.js/Chart.min.js}"></script>
+        <script type="text/javascript" th:src="@{/js/demo/chart-pie-admin.js}"></script>
     </section>
-
-    <!-- Page level custom scripts -->
-    <script type="text/javascript" th:src="@{/js/demo/chart-pie-admin.js}"></script>
-    <script type="text/javascript" th:src="@{/vendor/chart.js/Chart.js}"></script>
-
 
 </body>
 </html>
