moved chart-pie-admin outside of /demo/

--- a/src/main/resources/templates/admin-dashboard.html
+++ b/src/main/resources/templates/admin-dashboard.html
@@ -187,7 +187,7 @@
 
         <!-- Page level custom scripts -->
         <script type="text/javascript" th:src="@{/vendor/chart.js/Chart.min.js}"></script>
-        <script type="text/javascript" th:src="@{/js/demo/chart-pie-admin.js}"></script>
+        <script type="text/javascript" th:src="@{/js/chart-pie-admin.js}"></script>
     </section>
 
 </body>
