ERD-30-Fix_Insert

--- a/src/main/resources/templates/serviceprovider-dashboard.html
+++ b/src/main/resources/templates/serviceprovider-dashboard.html
@@ -185,7 +185,7 @@
                                                 th:text="${serviceProvider.businessName}"></span></p>
                                     </div>
                                     <td style="text-align: center">
-                                        <a th:href="@{/serviceProvider/{serviceProviderId}/profile(serviceProviderId=${serviceProvider.id})}"
+                                        <a th:href="@{/serviceProvider/{serviceProviderId}/profile(serviceProviderId=${serviceProviderId})}"
                                            class="btn btn-warning btn-circle btn-sm">
                                             <i class="fas fa-pen"></i>
                                         </a>
