--- a/src/main/resources/templates/client-dashboard.html
+++ b/src/main/resources/templates/client-dashboard.html
@@ -44,6 +44,10 @@
 
     <!-- Page Content-->
     <section layout:fragment="body" class="px-3 py-1">
+        <div class="d-sm-flex align-items-center justify-content-between mb-4">
+            <h1 class="h3 mb-0 text-gray-800" th:text="${'Welcome ' + client.firstName + '!'}"></h1>
+        </div>
+
         <div class="row">
             <div class="col-lg-3">
 
