--- a/src/main/resources/templates/client-tasks-offers.html
+++ b/src/main/resources/templates/client-tasks-offers.html
@@ -3,7 +3,7 @@
         xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
         layout:decorate="~{layout}">
 <head>
-    <title>Client Tasks</title>
+    <title>Task Offers</title>
 </head>
 
 <body class="d-flex flex-column h-100" xmlns:th="http://www.w3.org/1999/xhtml">
@@ -49,51 +49,38 @@
 
         <div class="card shadow mb-4">
             <div class="card-header py-3">
-                <h6 class="m-0 font-weight-bold text-primary">My Tasks</h6>
+                <h6 class="m-0 font-weight-bold text-primary" th:text="${'Offers for ' +task.title}"></h6>
             </div>
             <div class="card-body">
                 <div class="table-responsive">
                     <table class="table table-bordered" id="dataTable" STYLE="width='100%'; cellspacing='0'" >
                         <thead>
                         <tr>
-                            <th>Task ID</th>
-                            <th>Title</th>
-                            <th>Descriptions</th>
-                            <th>Budget</th>
-                            <th>Created Date</th>
-                            <th>Target Date</th>
-                            <th>Location</th>
+                            <th>Price Offered</th>
+                            <th>Description</th>
+                            <th>Offered By</th>
                             <th>Status</th>
-                            <th>Action</th>
+                            <th style="text-align: center;" >Action</th>
                         </tr>
                         </thead>
-                        <tbody th:each="task :${tasks}">
+                        <tbody th:each="offer :${offers}">
                         <tr>
-                            <td th:text="${task.id}"></td>
-                            <td th:text="${task.title}"></td>
-                            <td th:text="${task.description}"></td>
-                            <td th:text="${task.budget}"></td>
-                            <td th:text="${task.createdDate}"></td>
-                            <td th:text="${task.targetDate}"></td>
-                            <td th:text="${task.street+', '+task.city+', '+task.postalCode}"></td>
-                            <td th:text="${task.status}"></td>
+                            <td th:text="${offer.price}"></td>
+                            <td th:text="${offer.description}"></td>
+                            <td th:text="${offer.serviceProvider.firstName + ' ' +offer.serviceProvider.lastName}"></td>
+                            <td th:text="${offer.status}"></td>
                             <td style="text-align: center; white-space: nowrap;">
-                                <a th:href="@{/client/tasks/{taskId}/offers(taskId=${task.id})}"
-                                   title="View Offers"
-                                   class="btn btn-info btn-circle btn-sm">
-                                    <i class="fas fa-handshake"></i>
-                                </a>
-                                <a th:href="@{/client/tasks/{taskId}/edit(taskId=${task.id})}"
-                                class="btn btn-warning btn-circle btn-sm"
-                                   title="Edit Task"
-                                   th:classappend="${task.status != 'PENDING' ? 'disabled' : ''}"
+                                <a th:href="@{/client/tasks/offers/{offerId}/approve(offerId=${offer.id})}"
+                                   class="btn btn-success btn-circle btn-sm"
+                                   title="Accept Offer"
+                                   th:classappend="${offer.status != 'OFFERED' ? 'disabled' : ''}"
                                 >
-                                    <i class="fas fa-pen"></i>
+                                    <i class="fas fa-check"></i>
                                 </a>
-                                <a th:href="@{/client/tasks/{taskId}/cancel(taskId=${task.id})}"
+                                <a th:href="@{/client/tasks/offers/{offerId}/approve(offerId=${offer.id})}"
                                    class="btn btn-danger btn-circle btn-sm"
-                                   title="Cancel Task"
-                                   th:classappend="${task.status != 'PENDING' ? 'disabled' : ''}"
+                                   title="Reject Offer"
+                                   th:classappend="${offer.status != 'OFFERED' ? 'disabled' : ''}"
                                 >
                                     <i class="fas fa-times"></i>
                                 </a>
