added legend to chart

--- a/src/main/resources/templates/admin-dashboard.html
+++ b/src/main/resources/templates/admin-dashboard.html
@@ -172,7 +172,17 @@
                     <!-- Card Content - Collapse -->
                     <div class="collapse show">
                         <div class="card-body">
-                            <canvas id="usersChart"></canvas>
+                            <div class="chart-pie pt-4 pb-2">
+                                <canvas id="usersChart"></canvas>
+                            </div>
+                            <div class="mt-4 text-center small">
+                                <span class="mr-2">
+                                    <i class="fas fa-circle text-primary"></i> Clients
+                                </span>
+                                <span class="mr-2">
+                                    <i class="fas fa-circle text-success"></i> Service Provider
+                                </span>
+                            </div>
                         </div>
                     </div>
                 </div>
