--- a/src/main/resources/templates/admin-serviceproviders.html
+++ b/src/main/resources/templates/admin-serviceproviders.html
@@ -58,6 +58,21 @@
       <div class="card-header py-3">
         <h6 class="m-0 font-weight-bold text-primary">Service Provider Management</h6>
       </div>
+      <br>
+      <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search"
+            th:action="@{/admin/serviceproviders/search}"
+            th:object="${serviceProviders}"
+            method="get">
+        <div class="input-group">
+          <input type="text" class="form-control bg-light border-0 small" placeholder="Search name..."
+                 aria-label="Search" aria-describedby="basic-addon2" name="name">
+          <div class="input-group-append">
+            <button class="btn btn-primary" type="submit">
+              <i class="fas fa-search fa-sm"></i>
+            </button>
+          </div>
+        </div>
+      </form>
 
       <div class="card-body">
         <div class="table-responsive">
