--- a/src/main/resources/templates/client-tasks-edit.html
+++ b/src/main/resources/templates/client-tasks-edit.html
@@ -30,13 +30,13 @@
 
     <li class="nav-item">
         <a class="nav-link" href="/client/tasks/new">
-            <i class="fas fa-fw fa-briefcase"></i>
+            <i class="fas fa-fw fa-plus"></i>
             <span>New Request</span></a>
     </li>
 
     <li class="nav-item active">
         <a class="nav-link" href="/client/tasks">
-            <i class="fas fa-fw fa-briefcase"></i>
+            <i class="fas fa-fw fa-list"></i>
             <span>Task List</span></a>
     </li>
 
