--- a/src/main/resources/templates/serviceprovider-dashboard.html
+++ b/src/main/resources/templates/serviceprovider-dashboard.html
@@ -16,7 +16,7 @@
 <section layout:fragment="sidebar-item" class="py-2">
     <hr class="sidebar-divider my-0">
     <li class="nav-item active">
-        <a class="nav-link" th:href="@{/serviceProvider/{id}(id=${serviceProviderId})/dashboard}">
+        <a class="nav-link" th:href="@{|/serviceProvider/${serviceProviderId}/dashboard|}">
             <i class="fas fa-fw fa-tachometer-alt"></i>
             <span>Dashboard</span>
         </a>
@@ -32,7 +32,7 @@
         </a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" th:href="@{serviceProvider/{id}(id=${serviceProviderId})/task}">
+        <a class="nav-link" th:href="@{|/serviceProvider/${serviceProviderId}/task|}">
             <i class="fas fa-fw fa-briefcase"></i>
             <span>Task List</span>
         </a>
