added task list to service provider

--- a/src/main/resources/templates/serviceprovider-dashboard.html
+++ b/src/main/resources/templates/serviceprovider-dashboard.html
@@ -27,13 +27,13 @@
         Tasks
     </div>
     <li class="nav-item">
-        <a class="nav-link" th:href="@{/serviceProvider/task}">
+        <a class="nav-link" th:href="@{/serviceProvider/tasks}">
             <i class="fas fa-fw fa-briefcase"></i>
             <span>New Request</span>
         </a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" th:href="@{/serviceProvider/task}">
+        <a class="nav-link" th:href="@{/serviceProvider/tasks}">
             <i class="fas fa-fw fa-briefcase"></i>
             <span>Task List</span>
         </a>
