--- a/src/main/resources/templates/client-dashboard.html
+++ b/src/main/resources/templates/client-dashboard.html
@@ -35,6 +35,12 @@
         </li>
 
         <li class="nav-item">
+            <a class="nav-link" href="/client/tasks/board">
+                <i class="fas fa-fw fa-th-large"></i>
+                <span>Board</span></a>
+        </li>
+
+        <li class="nav-item">
             <a class="nav-link" href="/client/tasks">
                 <i class="fas fa-fw fa-list"></i>
                 <span>Task List</span></a>
@@ -45,7 +51,7 @@
     <!-- Page Content-->
     <section layout:fragment="body" class="px-3 py-1">
         <div class="d-sm-flex align-items-center justify-content-between mb-4">
-            <h1 class="h3 mb-0 text-gray-800" th:text="${'Welcome ' + client.firstName + '!'}"></h1>
+            <h1 class="h3 mb-0 text-gray-800" th:text="'Welcome ' + ${client.firstName} + '!'"></h1>
         </div>
 
         <div class="row">
@@ -68,13 +74,13 @@
             </div>
             <!-- Earnings (Monthly) Card Example -->
             <div class="col-xl-3 col-md-6 mb-4">
-                <div class="card border-left-primary shadow h-100 py-2">
+                <div class="card border-left-warning shadow h-100 py-2">
                     <div class="card-body">
                         <div class="row no-gutters align-items-center">
                             <div class="col mr-2">
                                 <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
                                     Ongoing Requests</div>
-                                <div class="h5 mb-0 font-weight-bold text-gray-800">5</div>
+                                <div class="h5 mb-0 font-weight-bold text-gray-800" th:text="${ongoingTaskCount}"></div>
                             </div>
                             <div class="col-auto">
                                 <i class="fas fa-spinner fa-2x text-gray-300"></i>
@@ -92,7 +98,7 @@
                             <div class="col mr-2">
                                 <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
                                     Completed Requests</div>
-                                <div class="h5 mb-0 font-weight-bold text-gray-800">8</div>
+                                <div class="h5 mb-0 font-weight-bold text-gray-800" th:text="${completedTaskCount}"></div>
                             </div>
                             <div class="col-auto">
                                 <i class="fas fa-check-square fa-2x text-gray-300"></i>
@@ -110,7 +116,7 @@
                             <div class="col mr-2">
                                 <div class="text-xs font-weight-bold text-danger text-uppercase mb-1">
                                     Cancelled Requests</div>
-                                <div class="h5 mb-0 font-weight-bold text-gray-800">14</div>
+                                <div class="h5 mb-0 font-weight-bold text-gray-800" th:text="${cancelledTaskCount}"></div>
                             </div>
                             <div class="col-auto">
                                 <i class="fas fa-ban fa-2x text-gray-300"></i>
@@ -122,154 +128,6 @@
 
         </div>
 
-        <div class="row">
-            <div class="col-lg-3">
-
-                <!-- Collapsable Card Example -->
-                <div class="card border-left-secondary shadow mt-4 mb-4">
-                    <!-- Card Header - Accordion -->
-                    <a href="#collapseCardExample" class="d-block card-header py-3" data-toggle="collapse"
-                       role="button" aria-expanded="true" aria-controls="collapseCardExample">
-                        <h6 class="m-0 font-weight-bold text-primary">Pending Tasks</h6>
-                    </a>
-                    <!-- Card Content - Collapse -->
-                    <div class="collapse show" id="collapseCardExample">
-                        <div class="card-body">
-                            <!-- Dropdown Card Example -->
-                            <div class="card shadow mb-4">
-                                <!-- Card Header - Dropdown -->
-                                <div
-                                        class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                                    <h6 class="m-0 font-weight-bold text-secondary">Air Conditioner Repair</h6>
-                                    <div class="dropdown no-arrow">
-                                        <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
-                                           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                            <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
-                                        </a>
-                                        <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in"
-                                             aria-labelledby="dropdownMenuLink">
-                                            <div class="dropdown-header">Action:</div>
-                                            <a class="dropdown-item" href="#">Edit</a>
-                                            <a class="dropdown-item" href="#">Delete</a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <!-- Card Body -->
-                                <div class="card-body">
-                                    Label Target Date
-                                </div>
-                            </div>
-                            <!-- Dropdown Card Example -->
-                            <div class="card shadow mb-4">
-                                <!-- Card Header - Dropdown -->
-                                <div
-                                        class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                                    <h6 class="m-0 font-weight-bold text-secondary">Laundry Service</h6>
-                                    <div class="dropdown no-arrow">
-                                        <a class="dropdown-toggle" href="#" role="button" id="pendingDropdownMenuLink"
-                                           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                            <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
-                                        </a>
-                                        <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in"
-                                             aria-labelledby="pendingDropdownMenuLink">
-                                            <div class="dropdown-header">Action:</div>
-                                            <a class="dropdown-item" href="#">Edit</a>
-                                            <a class="dropdown-item" href="#">Delete</a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <!-- Card Body -->
-                                <div class="card-body">
-                                    Label Target Date
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-lg-3">
-
-                <!-- Collapsable Card Example -->
-                <div class="card border-left-warning shadow mt-4 mb-4">
-                    <!-- Card Header - Accordion -->
-                    <a href="#ongoingTasksCard" class="d-block card-header py-3" data-toggle="collapse"
-                       role="button" aria-expanded="true" aria-controls="collapseCardExample">
-                        <h6 class="m-0 font-weight-bold text-primary">Ongoing Tasks</h6>
-                    </a>
-                    <!-- Card Content - Collapse -->
-                    <div class="collapse show" id="ongoingTasksCard">
-                        <div class="card-body">
-                            <!-- Dropdown Card Example -->
-                            <div class="card shadow mb-4">
-                                <!-- Card Header - Dropdown -->
-                                <div
-                                        class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                                    <h6 class="m-0 font-weight-bold text-secondary">Printer Repair</h6>
-                                    <div class="dropdown no-arrow">
-                                        <a class="dropdown-toggle" href="#" role="button" id="ongoingDropdownMenuLink"
-                                           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                            <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
-                                        </a>
-                                        <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in"
-                                             aria-labelledby="ongoingdropdownMenuLink">
-                                            <div class="dropdown-header">Action:</div>
-                                            <a class="dropdown-item" href="#">Edit</a>
-                                            <a class="dropdown-item" href="#">Delete</a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <!-- Card Body -->
-                                <div class="card-body">
-                                    Label Target Date
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-lg-3">
-
-                <!-- Collapsable Card Example -->
-                <div class="card border-left-success shadow mt-4 mb-4">
-                    <!-- Card Header - Accordion -->
-                    <a href="#completedTasksCard" class="d-block card-header py-3" data-toggle="collapse"
-                       role="button" aria-expanded="true" aria-controls="collapseCardExample">
-                        <h6 class="m-0 font-weight-bold text-primary">Completed Tasks</h6>
-                    </a>
-                    <!-- Card Content - Collapse -->
-                    <div class="collapse show" id="completedTasksCard">
-                        <div class="card-body">
-                            This is a collapsable card example using Bootstrap's built in collapse
-                            functionality. <strong>Click on the card header</strong> to see the card body
-                            collapse and expand!
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-lg-3">
-
-                <!-- Collapsable Card Example -->
-                <div class="card border-left-danger shadow mt-4 mb-4">
-                    <!-- Card Header - Accordion -->
-                    <a href="#cancelledTasksCard" class="d-block card-header py-3" data-toggle="collapse"
-                       role="button" aria-expanded="true" aria-controls="collapseCardExample">
-                        <h6 class="m-0 font-weight-bold text-primary">Cancelled Tasks</h6>
-                    </a>
-                    <!-- Card Content - Collapse -->
-                    <div class="collapse show" id="cancelledTasksCard">
-                        <div class="card-body">
-                            This is a collapsable card example using Bootstrap's built in collapse
-                            functionality. <strong>Click on the card header</strong> to see the card body
-                            collapse and expand!
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-        </div>
     </section>
 
 </body>
