--- a/src/main/resources/templates/client-tasks-create.html
+++ b/src/main/resources/templates/client-tasks-create.html
@@ -35,6 +35,12 @@
   </li>
 
   <li class="nav-item">
+    <a class="nav-link" href="/client/tasks/board">
+      <i class="fas fa-fw fa-th-large"></i>
+      <span>Board</span></a>
+  </li>
+
+  <li class="nav-item">
     <a class="nav-link" href="/client/tasks">
       <i class="fas fa-fw fa-list"></i>
       <span>Task List</span></a>
