--- a/src/main/resources/templates/client-tasks-offers.html
+++ b/src/main/resources/templates/client-tasks-offers.html
@@ -34,6 +34,12 @@
             <span>New Request</span></a>
     </li>
 
+    <li class="nav-item">
+        <a class="nav-link" href="/client/tasks/board">
+            <i class="fas fa-fw fa-th-large"></i>
+            <span>Board</span></a>
+    </li>
+
     <li class="nav-item active">
         <a class="nav-link" href="/client/tasks">
             <i class="fas fa-fw fa-list"></i>
