--- a/src/main/resources/templates/admin-dashboard.html
+++ b/src/main/resources/templates/admin-dashboard.html
@@ -190,8 +190,8 @@
         </div>
 
         <!-- Page level custom scripts -->
-        <script type="text/javascript" th:src="@{/vendor/chart.js/Chart.min.js}"></script>
-        <script type="text/javascript" th:src="@{/js/chart-pie-admin.js}"></script>
+        <script type="text/javascript" th:src="@{/vendor/chart.js/Chart.min.js}" defer></script>
+        <script type="text/javascript" th:src="@{/js/chart-pie-admin.js}" defer></script>
     </section>
 
 </body>
