--- a/src/main/resources/templates/serviceprovider-tasks-list.html
+++ b/src/main/resources/templates/serviceprovider-tasks-list.html
@@ -2,6 +2,8 @@
       layout:decorate="~{layout}">
 <head>
     <title>Service Provider Task List</title>
+
+    <link th:href="@{/vendor/datatables/dataTables.bootstrap4.min.css}" rel="stylesheet">
 </head>
 
 <body class="d-flex flex-column h-100" xmlns:th="http://www.w3.org/1999/xhtml">
@@ -51,7 +53,7 @@
             </div>
             <div class="card-body">
                 <div class="table-responsive">
-                    <table class="table table-bordered" id="dataTable" STYLE="width='100%'; cellspacing='0'" >
+                    <table class="table table-bordered" id="tasksTable" STYLE="width='100%'; cellspacing='0'" >
                         <thead>
                         <tr>
                             <th>Task ID</th>
@@ -64,30 +66,33 @@
                             <th>Action</th>
                         </tr>
                         </thead>
-                        <tbody th:each="task :${pendingTaskList}">
-                        <tr>
-                            <td th:text="${task.id}"></td>
-                            <td th:text="${task.title}"></td>
-                            <td th:text="${task.description}"></td>
-                            <td th:text="${task.budget}"></td>
-                            <td th:text="${task.createdDate}"></td>
-                            <td th:text="${task.targetDate}"></td>
-                            <td th:text="${task.street+', '+task.city+', '+task.postalCode}"></td>
-                            <td style="text-align: center; white-space: nowrap;">
-                                <a th:href="@{/serviceProvider/tasks/{taskId}/offers(taskId=${task.id})}"
-                                   title="Make New Offer"
-                                   class="btn btn-info btn-circle btn-sm">
-                                    <i class="fas fa-handshake"></i>
-                                </a>
-                            </td>
-
-                        </tr>
+                        <tbody>
+                            <tr th:each="task :${pendingTaskList}">
+                                <td th:text="${task.id}"></td>
+                                <td th:text="${task.title}"></td>
+                                <td th:text="${task.description}"></td>
+                                <td th:text="${task.budget}"></td>
+                                <td th:text="${task.createdDate}"></td>
+                                <td th:text="${task.targetDate}"></td>
+                                <td th:text="${task.street+', '+task.city+', '+task.postalCode}"></td>
+                                <td style="text-align: center; white-space: nowrap;">
+                                    <a th:href="@{/serviceProvider/tasks/{taskId}/offers(taskId=${task.id})}"
+                                       title="Make New Offer"
+                                       class="btn btn-info btn-circle btn-sm">
+                                        <i class="fas fa-handshake"></i>
+                                    </a>
+                                </td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
             </div>
         </div>
     </div>
+
+    <script type="text/javascript" th:src="@{/vendor/datatables/jquery.dataTables.min.js}" defer></script>
+    <script type="text/javascript" th:src="@{/vendor/datatables/dataTables.bootstrap4.min.js}" defer></script>
+    <script type="text/javascript" th:src="@{/js/table-tasks-serviceprovider.js}" defer></script>
 
 </section>
 
