Adding labels in task creation and update

--- a/src/main/resources/templates/client-tasks-board.html
+++ b/src/main/resources/templates/client-tasks-board.html
@@ -65,11 +65,11 @@
                 <div class="collapse show" id="collapseCardExample">
                     <div class="card-body">
                         <!-- Dropdown Card Example -->
-                        <div class="card shadow mb-4">
+                        <div class="card shadow mb-4" th:each="pendingTask :${pendingTasks}">
                             <!-- Card Header - Dropdown -->
                             <div
                                     class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                                <h6 class="m-0 font-weight-bold text-secondary">Air Conditioner Repair</h6>
+                                <h6 class="m-0 font-weight-bold text-secondary" th:text="${pendingTask.title}"></h6>
                                 <div class="dropdown no-arrow">
                                     <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
                                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -84,34 +84,10 @@
                                 </div>
                             </div>
                             <!-- Card Body -->
-                            <div class="card-body">
-                                Label Target Date
+                            <div class="card-body" th:text="${pendingTask.targetDate} + ${pendingTask.description}">
                             </div>
                         </div>
-                        <!-- Dropdown Card Example -->
-                        <div class="card shadow mb-4">
-                            <!-- Card Header - Dropdown -->
-                            <div
-                                    class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                                <h6 class="m-0 font-weight-bold text-secondary">Laundry Service</h6>
-                                <div class="dropdown no-arrow">
-                                    <a class="dropdown-toggle" href="#" role="button" id="pendingDropdownMenuLink"
-                                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
-                                    </a>
-                                    <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in"
-                                         aria-labelledby="pendingDropdownMenuLink">
-                                        <div class="dropdown-header">Action:</div>
-                                        <a class="dropdown-item" href="#">Edit</a>
-                                        <a class="dropdown-item" href="#">Delete</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- Card Body -->
-                            <div class="card-body">
-                                Label Target Date
-                            </div>
-                        </div>
+
                     </div>
                 </div>
             </div>
@@ -170,9 +146,7 @@
                 <!-- Card Content - Collapse -->
                 <div class="collapse show" id="completedTasksCard">
                     <div class="card-body">
-                        This is a collapsable card example using Bootstrap's built in collapse
-                        functionality. <strong>Click on the card header</strong> to see the card body
-                        collapse and expand!
+
                     </div>
                 </div>
             </div>
@@ -190,9 +164,7 @@
                 <!-- Card Content - Collapse -->
                 <div class="collapse show" id="cancelledTasksCard">
                     <div class="card-body">
-                        This is a collapsable card example using Bootstrap's built in collapse
-                        functionality. <strong>Click on the card header</strong> to see the card body
-                        collapse and expand!
+
                     </div>
                 </div>
             </div>
