added service provider task list

--- a/src/main/resources/templates/serviceprovider-profile-edit.html
+++ b/src/main/resources/templates/serviceprovider-profile-edit.html
@@ -28,13 +28,13 @@
     <li class="nav-item">
         <a class="nav-link" th:href="@{/serviceProvider/tasks}">
             <i class="fas fa-fw fa-briefcase"></i>
-            <span>New Request</span>
+            <span>My Tasks</span>
         </a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" th:href="@{serviceProvider/tasks}">
+        <a class="nav-link" th:href="@{/serviceProvider/tasks/pending-tasks}">
             <i class="fas fa-fw fa-briefcase"></i>
-            <span>Task List</span>
+            <span>Pending Task List</span>
         </a>
     </li>
 </section>
