--- a/src/main/resources/templates/serviceprovider-tasks-list.html
+++ b/src/main/resources/templates/serviceprovider-tasks-list.html
@@ -31,13 +31,13 @@
     <li class="nav-item">
         <a class="nav-link" th:href="@{/serviceProvider/tasks}">
             <i class="fas fa-fw fa-briefcase"></i>
-            <span>New Request</span>
+            <span>My Tasks</span>
         </a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" th:href="@{/serviceProvider/tasks}">
+        <a class="nav-link" th:href="@{/serviceProvider/tasks/pending-tasks}">
             <i class="fas fa-fw fa-briefcase"></i>
-            <span>Task List</span>
+            <span>Pending Task List</span>
         </a>
     </li>
 </section>
@@ -63,11 +63,12 @@
                             <th>Created Date</th>
                             <th>Target Date</th>
                             <th>Location</th>
+                            <th>Status</th>
                             <th>Action</th>
                         </tr>
                         </thead>
                         <tbody>
-                            <tr th:each="task :${pendingTaskList}">
+                            <tr th:each="task :${taskList}">
                                 <td th:text="${task.id}"></td>
                                 <td th:text="${task.title}"></td>
                                 <td th:text="${task.description}"></td>
@@ -75,10 +76,12 @@
                                 <td th:text="${task.createdDate}"></td>
                                 <td th:text="${task.targetDate}"></td>
                                 <td th:text="${task.street+', '+task.city+', '+task.postalCode}"></td>
+                                <td th:text="${task.status}"></td>
                                 <td style="text-align: center; white-space: nowrap;">
                                     <a th:href="@{/serviceProvider/tasks/{taskId}/offers(taskId=${task.id})}"
                                        title="Make New Offer"
-                                       class="btn btn-info btn-circle btn-sm">
+                                       class="btn btn-info btn-circle btn-sm"
+                                       th:classappend="${task.status != 'PENDING' ? 'disabled' : ''}">
                                         <i class="fas fa-handshake"></i>
                                     </a>
                                 </td>
