Service Provider - Create Offer

--- a/src/main/resources/templates/client-tasks-list.html
+++ b/src/main/resources/templates/client-tasks-list.html
@@ -43,7 +43,7 @@
     <li class="nav-item active">
         <a class="nav-link" href="/client/tasks">
             <i class="fas fa-fw fa-list"></i>
-            <span>Task List</span></a>
+            <span>Task </span></a>
     </li>
 
 </section>
