--- a/src/main/resources/templates/serviceprovider-tasks-offer.html
+++ b/src/main/resources/templates/serviceprovider-tasks-offer.html
@@ -26,15 +26,15 @@
         Tasks
     </div>
     <li class="nav-item">
-        <a class="nav-link" th:href="@{/serviceProvider/task}">
+        <a class="nav-link" th:href="@{/serviceProvider/tasks}">
             <i class="fas fa-fw fa-briefcase"></i>
-            <span>New Request</span>
+            <span>My Tasks</span>
         </a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" th:href="@{/serviceProvider/task}">
+        <a class="nav-link" th:href="@{/serviceProvider/tasks/pending-tasks}">
             <i class="fas fa-fw fa-briefcase"></i>
-            <span>Task List</span>
+            <span>Pending Task List</span>
         </a>
     </li>
 </section>
