--- a/src/main/resources/templates/serviceprovider-profile-edit.html
+++ b/src/main/resources/templates/serviceprovider-profile-edit.html
@@ -34,7 +34,7 @@
     <li class="nav-item">
         <a class="nav-link" th:href="@{/serviceProvider/tasks/pending-tasks}">
             <i class="fas fa-fw fa-briefcase"></i>
-            <span>Pending Task List</span>
+            <span>Available Task</span>
         </a>
     </li>
 </section>
