Separated my tasks page into my ongoing tasks and my completed tasks

--- a/src/main/resources/templates/serviceprovider-tasks-list.html
+++ b/src/main/resources/templates/serviceprovider-tasks-list.html
@@ -32,9 +32,15 @@
         Tasks
     </div>
     <li class="nav-item">
-        <a class="nav-link" th:href="@{/serviceProvider/tasks}">
+        <a class="nav-link" th:href="@{/serviceProvider/tasks/ongoing-tasks}">
             <i class="fas fa-fw fa-briefcase"></i>
-            <span>My Tasks</span>
+            <span>My Ongoing Tasks</span>
+        </a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" th:href="@{/serviceProvider/tasks/completed-tasks}">
+            <i class="fas fa-fw fa-briefcase"></i>
+            <span>My Completed Tasks</span>
         </a>
     </li>
     <li class="nav-item">
