--- a/src/main/resources/templates/serviceprovider-profile-edit.html
+++ b/src/main/resources/templates/serviceprovider-profile-edit.html
@@ -17,6 +17,7 @@
     <hr class="sidebar-divider my-0">
     <li class="nav-item active">
         <a class="nav-link" th:href="@{/serviceProvider/dashboard}">
+
             <i class="fas fa-fw fa-tachometer-alt"></i>
             <span>Dashboard</span>
         </a>
@@ -26,9 +27,15 @@
         Tasks
     </div>
     <li class="nav-item">
-        <a class="nav-link" th:href="@{/serviceProvider/tasks}">
+        <a class="nav-link" th:href="@{/serviceProvider/tasks/ongoing-tasks}">
             <i class="fas fa-fw fa-briefcase"></i>
-            <span>My Tasks</span>
+            <span>My Ongoing Tasks</span>
+        </a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" th:href="@{/serviceProvider/tasks/completed-tasks}">
+            <i class="fas fa-fw fa-briefcase"></i>
+            <span>My Completed Tasks</span>
         </a>
     </li>
     <li class="nav-item">
@@ -38,6 +45,7 @@
         </a>
     </li>
 </section>
+
 <!-- Page Content-->
 <section layout:fragment="body" class="px-3 py-1">
 
