--- a/src/main/resources/templates/serviceprovider-dashboard.html
+++ b/src/main/resources/templates/serviceprovider-dashboard.html
@@ -41,7 +41,7 @@
     <li class="nav-item">
         <a class="nav-link" th:href="@{/serviceProvider/tasks/pending-tasks}">
             <i class="fas fa-fw fa-briefcase"></i>
-            <span>Available Task</span>
+            <span>Available Tasks</span>
         </a>
     </li>
 </section>
