--- a/src/main/resources/templates/serviceprovider-profile-edit.html
+++ b/src/main/resources/templates/serviceprovider-profile-edit.html
@@ -15,7 +15,7 @@
 <!-- Sidebar Navigation -->
 <section layout:fragment="sidebar-item" class="py-2">
     <hr class="sidebar-divider my-0">
-    <li class="nav-item active">
+    <li class="nav-item">
         <a class="nav-link" th:href="@{/serviceProvider/dashboard}">
 
             <i class="fas fa-fw fa-tachometer-alt"></i>
@@ -41,7 +41,7 @@
     <li class="nav-item">
         <a class="nav-link" th:href="@{/serviceProvider/tasks/pending-tasks}">
             <i class="fas fa-fw fa-briefcase"></i>
-            <span>Available Task</span>
+            <span>Available Tasks</span>
         </a>
     </li>
 </section>
