separated the custom scripts used in client-tasks-list and serviceprovider-my-task-list

--- a/src/main/resources/templates/client-tasks-list.html
+++ b/src/main/resources/templates/client-tasks-list.html
@@ -184,7 +184,7 @@
 
     <script type="text/javascript" th:src="@{/vendor/datatables/jquery.dataTables.min.js}" defer></script>
     <script type="text/javascript" th:src="@{/vendor/datatables/dataTables.bootstrap4.min.js}" defer></script>
-    <script type="text/javascript" th:src="@{/js/scripts.js}" defer></script>
+    <script type="text/javascript" th:src="@{/js/clientTaskScripts.js}" defer></script>
 
 </section>
 
