--- a/src/main/resources/templates/serviceprovider-my-task-list.html
+++ b/src/main/resources/templates/serviceprovider-my-task-list.html
@@ -107,7 +107,7 @@
     <script type="text/javascript" th:src="@{/vendor/datatables/dataTables.bootstrap4.min.js}" defer></script>
     <script type="text/javascript" th:src="@{/vendor/datatables/searchPanes.bootstrap4.min.js}" defer></script>
     <script type="text/javascript" th:src="@{/vendor/datatables/select.bootstrap4.min.js}" defer></script>
-    <script type="text/javascript" th:src="@{/js/scripts.js}" defer></script>
+    <script type="text/javascript" th:src="@{/js/serviceProviderScripts.js}" defer></script>
 
 </section>
 
