Create Offer Table

--- a/src/main/resources/templates/serviceprovider-tasks-list.html
+++ b/src/main/resources/templates/serviceprovider-tasks-list.html
@@ -48,6 +48,7 @@
     </li>
 </section>
 
+
 <!-- Page Content-->
 <section layout:fragment="body" class="py-5">
 
@@ -59,7 +60,7 @@
             </div>
             <div class="card-body">
                 <div class="table-responsive">
-                    <table class="table table-bordered" id="tasksTable" STYLE="width='100%'; cellspacing='0'" >
+                    <table class="table table-bordered" id="tasksTable" STYLE="width='100%'; cellspacing='0'">
                         <thead>
                         <tr>
                             <th>Task ID</th>
@@ -74,31 +75,75 @@
                         </tr>
                         </thead>
                         <tbody>
-                            <tr th:each="task :${taskList}">
-                                <td th:text="${task.id}"></td>
-                                <td th:text="${task.title}"></td>
-                                <td th:text="${task.description}"></td>
-                                <td th:text="${task.budget}"></td>
-                                <td th:text="${task.createdDate}"></td>
-                                <td th:text="${task.targetDate}"></td>
-                                <td th:text="${task.street+', '+task.city+', '+task.postalCode}"></td>
-                                <td th:text="${task.status}"></td>
-                                <td style="text-align: center; white-space: nowrap;">
-                                    <a th:href="@{/serviceProvider/tasks/{taskId}/offers(taskId=${task.id})}"
-                                       title="Make New Offer"
-                                       class="btn btn-info btn-circle btn-sm"
-                                       th:classappend="${task.status != 'PENDING' ? 'disabled' : ''}">
-                                        <i class="fas fa-handshake"></i>
-                                    </a>
-                                </td>
-                            </tr>
+                        <tr th:each="task :${taskList}">
+                            <td th:text="${task.id}"></td>
+                            <td th:text="${task.title}"></td>
+                            <td th:text="${task.description}"></td>
+                            <td th:text="${task.budget}"></td>
+                            <td th:text="${task.createdDate}"></td>
+                            <td th:text="${task.targetDate}"></td>
+                            <td th:text="${task.street+', '+task.city+', '+task.postalCode}"></td>
+                            <td th:text="${task.status}"></td>
+                            <td style="text-align: center; white-space: nowrap;">
+                                <a th:href="@{/serviceProvider/tasks/{taskId}/offers(taskId=${task.id})}"
+                                   title="Make New Offer"
+                                   class="btn btn-info btn-circle btn-sm"
+                                   th:classappend="${task.status != 'PENDING' ? 'disabled' : ''}">
+                                    <i class="fas fa-handshake"></i>
+                                </a>
+                            </td>
+                        </tr>
                         </tbody>
                     </table>
                 </div>
             </div>
         </div>
-    </div>
+        <div class="col-xl-8 col-lg-7">
+            <div class="card shadow mb-4">
+                <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                    <h6 class="m-0 font-weight-bold text-primary">My Offers</h6>
+                </div>
+                <div class="table-responsive">
+                    <table class="table table-bordered" id="offerListTable" STYLE="width='100%'; cellspacing='0'">
+                        <thead>
+                        <tr>
+                            <th>Task Title</th>
+                            <th>Task Description</th>
+                            <th>Task Location</th>
+                            <th>Offer Price</th>
+                            <th>Offer Description</th>
+                            <th>Status</th>
+                            <th>Action</th>
 
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr th:each="offer :${offerByServiceProvider}">
+                            <td th:text="${offer.taskDto.title}"></td>
+                            <td th:text="${offer.taskDto.description}"></td>
+                            <td th:text="${offer.taskDto.street+', '+offer.taskDto.city+', '+offer.taskDto.postalCode}"></td>
+                            <td th:text="${offer.price}"></td>
+                            <td th:text="${offer.taskDto.description}"></td>
+
+                            <td th:text="${offer.status}"></td>
+                            <td style="text-align: center; white-space: nowrap;">
+                                <a th:href="@{/serviceProvider/tasks/{taskId}/offers(taskId=${offer.taskDto.id})}"
+                                   title="Edit Offer"
+                                   class="btn btn-info btn-circle btn-sm"
+                                   th:classappend="${offer.taskDto.status != 'PENDING' ? 'disabled' : ''}">
+                                    <i class="fas fa-handshake"></i>
+                                </a>
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
+                    <div class="card-body">
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <script type="text/javascript" th:src="@{/vendor/datatables/jquery.dataTables.min.js}" defer></script>
     <script type="text/javascript" th:src="@{/vendor/datatables/dataTables.searchPanes.min.js}" defer></script>
     <script type="text/javascript" th:src="@{/vendor/datatables/dataTables.select.min.js}" defer></script>
