--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -103,9 +103,8 @@
                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <div layout:fragment="profile-name"></div>
 
-                            <i class="fas fa-user"></i>
-<!--                            <img class="img-profile rounded-circle"-->
-<!--                                 src="/assets/img/CHAMP-Logo.jpg">-->
+                            <img class="img-profile rounded-circle"
+                                 src="/assets/img/undraw_profile_2.svg">
                         </a>
                         <!-- Dropdown - User Information -->
                         <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
